Fixed dark mode bugs

--- a/css/Contato.css
+++ b/css/Contato.css
@@ -107,8 +107,8 @@ input:focus {
     background-color: #ceedfd;
 }
 
-.info.darkmode {
-    background-color: rgb(12, 0, 66);
+.info .darkmode {
+    background-color: #131955;
 }
 
 .socialmedia.darkmode {
@@ -130,6 +130,10 @@ input:focus {
         background-color: white;
         margin: 0px;
         padding: 15px;
+    }
+
+    .info.darkmode {
+        background-color: rgb(12, 0, 66);
     }
     
 }
